--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,6 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="8b8b72">  <td>24/08/22 13:59:19</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AppTest.testGeneraleStoreAPK()[pri:0, instance:org.test.AppTest@78e4deb0]">testGeneraleStoreAPK</td> 
-  <td>main@1651162064</td>   <td></td> </tr>
+<tr bgcolor="8b8b72">  <td>24/08/22 16:40:59</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;AppTest.quiteApplication()[pri:0, instance:org.test.AppTest@239a307b]">&lt;&lt;quiteApplication</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1624972302</td>   <td></td> </tr>
+<tr bgcolor="8b8b72">  <td>24/08/22 16:40:23</td>   <td>-36835</td> <td>&nbsp;</td><td title="&gt;&gt;AppTest.statApplication()[pri:0, instance:org.test.AppTest@239a307b]">&gt;&gt;statApplication</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1624972302</td>   <td></td> </tr>
+<tr bgcolor="8b8b72">  <td>24/08/22 16:40:31</td>   <td>-28686</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AppTest.testGeneraleStoreAPK()[pri:0, instance:org.test.AppTest@239a307b]">testGeneraleStoreAPK</td> 
+  <td>main@1624972302</td>   <td></td> </tr>
 </table>
